# ADV_cpp_calculator

./: CMakeLists.txt  README.md
CalculatorCMake/: CMakeLists.txt  CalculatorCMake.cpp  CalculatorCMake.h
CalculatorCMake/Calculator/: calculator.cpp  calculator.h
CalculatorCMake/DLLs/: CMakeLists.txt
CalculatorCMake/DLLs/cosinus/: CMakeLists.txt  cosinus.cpp  cosinus.h
CalculatorCMake/DLLs/logarithm/: CMakeLists.txt  logarithm.cpp  logarithm.h
CalculatorCMake/DLLs/plugins/: cosinus.ilk  logarithm.ilk  power.ilk  sinus.ilk
CalculatorCMake/DLLs/power/: CMakeLists.txt  power.cpp  power.h
CalculatorCMake/DLLs/sinus/: CMakeLists.txt  sinus.cpp  sinus.h
CalculatorCMake/Error/: error.h
CalculatorCMake/Eval/: eval.cpp  eval.h
CalculatorCMake/Operators/: operator.h  st_operators.h
CalculatorCMake/Parser/: parser.cpp  parser.h
CalculatorCMake/PluginLoader/: pluginLoader.h
CalculatorCMake/Reader/: reader.cpp  reader.h
CalculatorCMake/Token/: token.h
